--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -12,7 +12,8 @@ logging:
       pivotal: DEBUG
 
 greeting:
-  displayFortune: false
+  displayFortune: true
 
 quoteServiceURL: http://quote-service-dev.cfapps.io/quote
+
 
